some issues on mobile version

--- a/FE/app/styles/_main.scss
+++ b/FE/app/styles/_main.scss
@@ -60,5 +60,10 @@ h1, h2, h3 {
             margin-left: 20px !important;
         }
     }
+
+    .page-header-recalls .page-buttons-selected .header-select-service span.no-rotate{
+        margin-left: -15px;
+    }
+
 }
 
